<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="activity_info_neighbour">The Neighbour</string>
    <string name="activity_neighbour_info_about_me">A propos de moi</string>
</resources>

