<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_neighbour_layout"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/item_list_avatar"
        android:layout_width="50dp"
...
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_avatar"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toTopOf="@+id/item_list_avatar" />

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_name"
        app:layout_constraintEnd_toEndOf="parent"
...
