...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@mipmap/caroline_foreground"
            />
        <ImageView
            android:id="@+id/item_backward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/item_add_favorite_user_button"
            android:layout_width="56dp"
            android:layout_height="58dp"
            android:layout_marginEnd="32dp"
            android:elevation="10dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@id/item_avatar_user_image"
...
